[tool.poetry]
name = "source-ecforce"
version = "0.1.0"
description = "Source implementation for EC-FORCE."
authors = ["Airbyte <contact@airbyte.io>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.airbyte.com/integrations/sources/ecforce"
homepage = "https://airbyte.com"
repository = "https://github.com/airbytehq/airbyte"
packages = [ {include = "source_ecforce"}, {include = "main.py"} ]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
airbyte-cdk = "^6.58.0"
pyyaml = "^6.0.2"
cryptography = "^44.0.3"

[tool.poetry.scripts]
source-ecforce = "source_ecforce.run:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"